Added introduction text

--- a/app/views/shared/_budget_columns.html.erb
+++ b/app/views/shared/_budget_columns.html.erb
@@ -1,3 +1,8 @@
+<div class="col-sm-12 column" id="introduction-section">
+
+</div>
+
+
 <div id="alert_section_id" class="col-sm-12 column nopadding" style="text-align: center;">
   <!-- <div class="amountTransfer">ok</div> -->
   <div class="alert alert-success">
@@ -105,13 +110,9 @@
 
 <div class="col-sm-12 column clearfix" style="padding-bottom: 20px;">
 
-  <!-- <a href="#" id="footnotes-link">See footnotes</a> -->
-
+  <a href="#" id="footnotes-link"><%= t('scripts_messages.show_footnotes') %></a>
   <button class="btn btn-success pull-right submit_budget_form">
     <%= t('budget.conclusion_title') %>
-  </button>
-  <button class="btn btn-info pull-right" style="margin-right: 10px;" id="footnotes-link">
-    See footnotes
   </button>
 </div>
 
@@ -119,9 +120,9 @@
 <div class="col-sm-12 column" id="footnotes-section" style="display:none;">
   თხოვთ ყურადღება მიაქციოთ, რომ:
   <ol>
-    <li class="footnote_main_item">როდესაც იმპლიკაციაში ნათქვამია, რომ რაიმე მიზნის მიღწევა შეუძლებელია ან შეფერხდება იგულისხმება მხოლოდ 2014წ., მაგ., როდესაც ვამბობთ, რომ კულტურული მემკვიდრეობის დაცვა ვეღარ მოხერხდება, იგულისხმება 2014წლის მანძილზე კულტურული მემკვიდრეობის დაცვა.</li>
+    <li class="footnote_main_item">როდესაც იმპლიკაციაში მიხედვით რაიმე მიზნის მიღწევა შეუძლებელია ან ფერხდება იგულისხმება მხოლოდ 2014წ., მაგ., როდესაც ვამბობთ, რომ კულტურული მემკვიდრეობის დაცვა ვეღარ მოხერხდება, იგულისხმება 2014წლის მანძილზე კულტურული მემკვიდრეობის დაცვა.</li>
     <li class="footnote_main_item">ჩვენი პრიორიტეტები ყოველთვის არ ემთხვევა სახელმწიფო ბიუჯეტის კანონში მოცემულ პრიორიტეტებს.  ვინაიდან სახელმწიფო ბიუჯეტი ჯერ კიდევ არ არის სრულად პროგრამული ბიუჯეტში უამრავი მხარჯავი დაწესებულება ისეთი გაურკვეველი პრიორიტეტების ქვეშ არის მოქცეული, როგორიცაა მაგალითად ინსტიტუციონალური განვითარება და ქვეყნის ინტერესების სამართლებრივი მხარდაჭერა ნაცვლად იმისა, რომ შესაბამისი პრიორიტეტის ქვეშ იყოს მოქცეული, მაგ., პერსონალური ინფორმაციის დაცვის ინსპექტორის აპარატი სწორედ ამ გაურკვეველი პრიორიტეტების ქვეშ არის მოქცეული.</li>
-    <li class="footnote_main_item">ვინაიდან ჩვენი ონლაინ კალკულატორის სპეციფიკა მოითხოვდა ხარჯების გასაგები პრიორიტეტების ქვეშ მოქცევას, ჩვენ, მაგალითად, პერსონალური ინფორმაციის დაცვის ინსპექტორის აპარატი, რომელსაც პროგრამები/ქვეპროგრამები ჯერ კიდევ არ აქვს, იუსტიციის პრიორიტეტის ქვეშ მოვაქციეთ. სავაჭრო-სამრეწველო პალატა კი ეკონომიკის პრიორიტეტების ქვეშ მოვაქციეთ.</li>
+    <li class="footnote_main_item">ვინაიდან ჩვენი ონლაინ კალკულატორის სპეციფიკა მოითხოვდა ხარჯების გასაგები პრიორიტეტების ქვეშ მოქცევას, ჩვენ, მაგალითად, პერსონალური ინფორმაციის დაცვის ინსპექტორის აპარატი, რომელსაც პროგრამები/ქვეპროგრამები ჯერ კიდევ არ აქვს, იუსტიციის პრიორიტეტის ქვეშ მოვაქციეთ. სავაჭრო-სამრეწველო პალატა კი - ეკონომიკის პრიორიტეტების ქვეშ.</li>
     <li class="footnote_main_item">ონლაინ კალკულატორში არ არის მოცემული:
         <ol>
           <li class="footnote_secondary_item">
