--- a/app/views/budget/show.html.erb
+++ b/app/views/budget/show.html.erb
@@ -21,6 +21,35 @@
 
 <% end %>
 
+<div class="col-sm-12 column" id="title-section">
+    <h3>საბიუჯეტო კალკულატორი</h3>
+    <a href="#" id="introduction-link"><%= t('scripts_messages.show_introduction') %></a>
+</div>
+
+<div class="col-sm-12 column" id="introduction-section" style="display:none;">
+
+  <p>2014 წელს საქართველოს მთავრობა დაახლოებით 200 სხვადასხვა საბიუჯეტო პროგრამას/ქვეპროგრამას ახორციელებს.</p>
+
+  <p>ქვემოთ წარმოგიდგენთ 2014 წლის ინტერაქტიულ საბიუჯეტო კალკულატორს, რომლის <strong>მიზანია</strong> ჯანმრთელობის/სოციალური დაცვის, განათლებისა და მეცნიერების და სოფლის მეურნეობის მიმართულებებით მოსახლეობისთვის მნიშვნელოვანი პრიორიტეტების გამოკვეთა.</p>
+
+  <p>კალკულატორი <strong>საშუალებას გაძლევთ</strong> თანხები ჯანმრთელობის/სოციალური დაცვის, განათლებისა და მეცნიერების და სოფლის მეურნეობის თქვენთვის სასურველ პროგრამაში/ქვეპროგრამაში ნებისმიერი სხვა საბიუჯეტო პროგრამიდან/ქვეპროგრამიდან გადაიტანოთ.</p>
+
+  <p>საბიუჯეტო კალკულატორში ჯანმრთელობის/სოციალური დაცვის, განათლებისა და მეცნიერების და სოფლის მეურნეობის პროგრამები/ქვეპროგრამები მარჯვენა სვეტშია მოცემული, ხოლო ყველა დანარჩენი პროგრამა/ქვეპროგრამა -- მარცხენა სვეტში.</p>
+
+  <p>კალკულატორი საშუალებას გაძლევთ გაზარდოთ <strong>მარჯვენა სვეტში</strong> მოცემული ჯანმრთელობის/სოციალური დაცვის, განათლებისა და მეცნიერების და სოფლის მეურნეობის პროგრამები/ქვეპროგრამები მარცხენა სვეტში მოცემული პროგრამების/ქვეპროგრამების ხარჯზე.</p>
+
+  <p><strong>მარცხენა</strong> სვეტში მოცემული პროგრამები/ქვეპროგრამები შეგიძლიათ მხოლოდ <strong>შეამციროთ</strong>, <strong>მარჯვენა სვეტში</strong> მოცემული პროგრამები/ქვეპროგრამები კი - მხოლოდ <strong>გაზარდოთ</strong>. შესაბამისად, თანხების გადატანა მხოლოდ მარცხნიდან მარჯვნივ შეგიძლიათ, მაგრამ არა პირიქით. თუმცა თქვენ შეგიძლიათ მარცხენა <strong>სვეტის</strong> პროგრამებიდან/ქვეპროგრამებიდან მარჯვნივ გადატანილი თანხა უკან იმავე პროგრამებს/ქვეპროგრამებს დაუბრონოთ, საიდანაც აიღეთ.</p>
+
+  <p>მარცხენა სვეტში მოცემული პროგრამების/ქვეპროგრამების შემცირებას, ხოლო მარჯვენა სვეტში მოცემული პროგრამების/ქვეპროგრამების გაზრდას, ცხადია თავისი შედეგები ექნება. ჩვენ ეს შესაძლოა შედეგები მივაბით შემცირების/გაზრდის სხვადასხვა ზღვარს, რასაც თქვენ აირჩევთ, მაგ., 10-30%, 31-65%, 66%-90%, 90-100%. ზოგიერთ პროგრამას, შინაარსიადან გამომდინარე, უფრო ფართო და, შესაბამისად, ცოტა პროცენტული ზღვარი აქვს.</p>
+
+  <p>ვინაიდან თითოეული პროგრამის/ქვეპროგრამის ყოველი პროცენტული პუნქტით შემცირების/გაზრდისთვის შესაძლოა შედეგების დეტალიზება სრულიად ხელოვნური მიდგომა იქნებოდა, შესაძლოა შედეგები მხოლოდ თქვენ შემცირების/გაზრდის მოცემული ზღვრებისთვის შეგიძლიათ იხილოთ. შესაბამისად, ჩვენი დაშვებაა, რომ თუ რომელიმე პროგრამას/ქვეპროგრამას, მაგალითად, 10-30%-ით შეამცირებთ, ამ შემცირებას ერთი და იგივე შესაძლოა შედეგები მოჰყვება, მიუხედავად იმისა, თქვენ მოცემული ზღვარის ფარგლებში ამ პროგრამის/ქვეპროგრამის დაფინანსდებას, მაგალითად, 10%-ით შეამცირებთ, 15%-ით, თუ 27%-ით.</p>
+
+  <p>ინფორმირებული გადაწყვეტილების მიღებაში დასახმარებლად, ჩვენ გაძლევთ საშუალებას თვალი გადაავლოთ თქვენი გადაწყვეტილების შედეგებს, მაგ., შესაძლოა თქვენთვის ძალიან მნიშვნელოვანია ინფექციური დაავადებების ან დიალიზისა და თირკმლის ტრანსპლანტაციის ქვეპროგრამების დაფინანსების გაზრდა, მაგალითად, სამხედრო განათლების ქვეპროგრამის ხარჯზე, მაგრამ მას შემდეგ რაც გაიგებთ თუ რა შედეგი მოჰყვება სამხედრო განათლების განვითარების ქვეპროგრამის, ვთქვათ, 31-65%-ით შემცირებას, შესაძლოა გადაწყვეტილება შეიცვვალოთ  და ეს ქვეპროგრამა 10-30 %-ით  შეამციროთ ან საერთოდ არ შეამციროთ.</p>
+
+  <p>გთხოვთ კალკულატორის გამოყენებამდე გაეცნოთ ინსტრუმენტის ბოლოში მოცემულ განმარტებებს.</p>
+
+</div>
+
 <!-- Tabs -->
 <ul class="nav nav-tabs">
   <li class="active tab-label"><a href="#agriculture" role="tab" data-toggle="tab"><%= t('budget.Agriculture') %></a></li>
