--- a/app/views/shared/_budget_columns.html.erb
+++ b/app/views/shared/_budget_columns.html.erb
@@ -109,53 +109,53 @@
 <!-- end right column -->
 
 <div class="col-sm-12 column clearfix" style="padding-bottom: 20px;">
-
-  <a href="#" id="footnotes-link"><%= t('scripts_messages.show_footnotes') %></a>
+  <% if !params['embed'] %>
+    <a href="#" id="footnotes-link"><%= t('scripts_messages.show_footnotes') %></a>
+  <% end %>
   <button class="btn btn-success pull-right submit_budget_form">
     <%= t('budget.conclusion_title') %>
   </button>
 </div>
 
-
-<div class="col-sm-12 column" id="footnotes-section" style="display:none;">
-  თხოვთ ყურადღება მიაქციოთ, რომ:
-  <ol>
-    <li class="footnote_main_item">როდესაც იმპლიკაციაში მიხედვით რაიმე მიზნის მიღწევა შეუძლებელია ან ფერხდება იგულისხმება მხოლოდ 2014წ., მაგ., როდესაც ვამბობთ, რომ კულტურული მემკვიდრეობის დაცვა ვეღარ მოხერხდება, იგულისხმება 2014წლის მანძილზე კულტურული მემკვიდრეობის დაცვა.</li>
-    <li class="footnote_main_item">ჩვენი პრიორიტეტები ყოველთვის არ ემთხვევა სახელმწიფო ბიუჯეტის კანონში მოცემულ პრიორიტეტებს.  ვინაიდან სახელმწიფო ბიუჯეტი ჯერ კიდევ არ არის სრულად პროგრამული ბიუჯეტში უამრავი მხარჯავი დაწესებულება ისეთი გაურკვეველი პრიორიტეტების ქვეშ არის მოქცეული, როგორიცაა მაგალითად ინსტიტუციონალური განვითარება და ქვეყნის ინტერესების სამართლებრივი მხარდაჭერა ნაცვლად იმისა, რომ შესაბამისი პრიორიტეტის ქვეშ იყოს მოქცეული, მაგ., პერსონალური ინფორმაციის დაცვის ინსპექტორის აპარატი სწორედ ამ გაურკვეველი პრიორიტეტების ქვეშ არის მოქცეული.</li>
-    <li class="footnote_main_item">ვინაიდან ჩვენი ონლაინ კალკულატორის სპეციფიკა მოითხოვდა ხარჯების გასაგები პრიორიტეტების ქვეშ მოქცევას, ჩვენ, მაგალითად, პერსონალური ინფორმაციის დაცვის ინსპექტორის აპარატი, რომელსაც პროგრამები/ქვეპროგრამები ჯერ კიდევ არ აქვს, იუსტიციის პრიორიტეტის ქვეშ მოვაქციეთ. სავაჭრო-სამრეწველო პალატა კი - ეკონომიკის პრიორიტეტების ქვეშ.</li>
-    <li class="footnote_main_item">ონლაინ კალკულატორში არ არის მოცემული:
-        <ol>
-          <li class="footnote_secondary_item">
-              სახელმწიფო ბიუჯეტის ის პროგრამები, რაც ქვეპროგრამებად იშლება ვინაიდან ქვეპროგრამების დასახელებები გაცილებით უკეთესად ასახავს იმას თუ რაზე იხარჯება ფული, ვიდრე ქვეპროგრამები, მაგ.:
-              <ol>
-                <li>უმაღლესი საგანმანათლებლო და სამეცნიერო კვლევების პროგრამის ქვეპროგრამებია გამოცდების ორგანიზება, უმაღლესი საგანმანათლებლო და სამეცნიერო კვლევების პროგრამა 2014წელს შედგება ა. გამოცდების ორგანიზების და უმაღლესი საგანმანათლებლო და სამეცნიერო კვლევების ბ. მეცნიერებისა და სამეცნიერო კვლევების ხელშეწყობის გ. სახელმწიფო სასწავლო, სამაგისტრო გრანტები, დოქტორანტურის პროგრამები და ახალგაზრდების წახალისება.</li>
-                <li>სოციალური დაცვა და საპენსიო უზრუნველყოფის პროგრამა იშლება ა. საპენსიო უზრუნველყოფის ბ. სოციალური დახმარებების გ. სოციალური რეაბილიტაცია და ბავშვზე ზრუნვის ქვეპროგრამებად.</li>
-              </ol>
-          </li>
-          <li class="footnote_secondary_item">
-              ის პროგრამები და ქვეპროგრამები, რომლებიც დიდწილად ან მთლიანად გრანტებით  ხორციელდება, ან საქართველოს მთავრობის თანამონაწილეობის გარეშე.  რაც არ უნდა მცირე იყოს ამგვარი პროგრამა/ ქვეპროგრამა, ის დაფინანსების შემცირების შემთხვევაში აღარ განხორციელდება, მაგ., რეგიონული განვითარებისა და ინფრასტრუქტურის სამინისტროს იძულებით გადაადგილებული პირების მხარდაჭერის ქვეპროგრამის ბიუჯეტი 50.125 მილიონი ლარია. ამ ქვეპროგრამაში გრანტებით დაფინანსებულია ბიუჯეტის დაახლ.  86.7%-ია (43.5 მილიონი ლარი), საქართველოს მთავრობის კი -- 13.21% (6.625 მილიონი ლარი).  ჩვენ შეგვეძლო ჩამონათვალში ქვეპროგრამის ბიუჯეტში 6.625  მილიონი ლარი მიგვეთითებინა, მაგრამ აქ გრანტი მიბმულია მთავრობის თანადაფინანსებაზე, რისი შეწყვეტის შემთხვევაშიც დონორიც შეწყვეტს იძულებით გადაადგილებული პირების მხარდაჭერის ქვეპროგრამის დაფინანსებას და ქვეყანა დაკარგავს 222.2 მილიონი ლარის კრედიტს. მიუხედავად იმისა, რომ ეს პროგრამები უცხოური დაფინანსებით ხორციელდება, მათ საქართველოს მთავრობა ეთანხმება. ამ პროგრამებისთვის საქართველოს მთავრობა მართალია ფულს სესხულობს ან გრანტის სახით იღებს და მათი შემცირება ან გაზრდა ვერ მოახდენს გავლენას დონორზე/კრედიტორზე და შესაბამისად, ყოველგვარ აზრს მოკლებულია, მაგ.,  და ათასწლეულის გამოწვევა საქართველო, ან რეგიონული განვითარებისა და ინფრასტრუქტურის სამინისტროს იძულებით გადაადგილებული პირების მხარდაჭერის ქვეპროგრამა და სხვ.
-          </li>
-          <li class="footnote_secondary_item">
-              ისეთი ქოლგა ქვეპროგრამები, რომლებიც თავის მხრივ ქვედა საფეხურის ქვეპროგრამებად იშლება, როგორიცაა მაგალითად:
-              <ul>
-                <li>საზოგადოებრივი ჯანმრთელობის დაცვა, რაც თავის მხრივ იშლება 10 ქვედა საფეხურის ქვეპროგრამად: დაავადებათა ადრეული გამოვლენა და სკრინინგი, იმუნიზაცია, ეპიდზედამხედველობის პროგრამა, უსაფრთხო სისხლი, პროფესიულ დაავადებათა პრევენცია, ინფექციური დაავადებების მართვა, ტუბერკულოზის მართვა და სხვ. ცხადია, ჩამონათვალში საზოგადოებრივი ჯანმრთელობის დაცვა რომ შეგვეტანა ვერავინ მიხვდებოდა კონკრეტულად რა კეთდება ამ ქვეპროგრამის ფარგლებში.</li>
-                <li>მოსახლეობისათვის სამედიცინო მომსახურების მიწოდება პრიორიტეტულ სფეროებში, რაც, თავის მხრივ, იყოფა 10 ქვეპროგრამად.</li>
-                <li>საქართველოს მთავრობის ის საბიუჯეტო პროგრამები, რომელთა ბენეფიციარებმაც იციან თუ რა სარგებელს იღებენ მოცემული ქვეპროგრამით, მაგალითად საპენსიო უზრუნველყოფის ქვეპროგრამით.</li>
-                <li>ის პროგრამები/ქვეპროგრამები, რომელთაც უშუალო ბენეფიციარები არ ჰყავთ, მაგალითად სოციალური და ჯანმრთელობის დაცვის პროგრამების მართვა.</li>
-                <li>ჯანმრთელობის დაზღვევის ქვეპროგრამა, რაც მიუხედავად იმისა, რომ შეტანილია 2014წლის სახელმწიფო ბიუჯეტში, 2014 წლის მანძილზე ეტაპობრივად შეწყდა (218-ე დადგენილების სახ.  სადაზღვევო პროგრამა  1 აპრილს, ხოლო 165-ე დადგენილების სახ.  სადაზღვევო პროგრამა  -- 1 სექტემბერს).</li>
-              </ul>
-          </li>
-        </ol>
-    </li>
-    <li class="footnote_main_item">
-        პროგრამების/ქვეპროგრამმების გაზრდის (მარჯვენა სვეტი) იმპლიკაციები ყოველთვის არ არის მოცემული. შესაბამისად, იმპლიკაციების განსაზღვრა ყოველთვის ვერ ხერხდება, მაგალითად რა მოხდება:
-        <ul>
-          <li>მოსწავლეების სახელმძღვანელოებით უზრუნველყოფის პროგრამის დაფინანსების გაზრდის შემთხვევაში</li>
-          <li>რეგიონებში სოფლის მეურნეობის განვითარების პროგრამის მართვის და ადმინისტრირების დაფინანსების გაზრდის შემთხვევაში</li>
-          <li>ზოგადსაგანმანათლებლო სკოლების და სხვა ზოგიერთი ქვეპროგრამის დაფინანსების გაზრდის შემთხვევაში.</li>
-        </ul>
-    </li>
-  </ol>
-
-</div>
-
+<% if !params['embed'] %>
+    <div class="col-sm-12 column" id="footnotes-section" style="display:none;">
+      თხოვთ ყურადღება მიაქციოთ, რომ:
+      <ol>
+        <li class="footnote_main_item">როდესაც იმპლიკაციის მიხედვით რაიმე მიზნის მიღწევა შეუძლებელია ან ფერხდება იგულისხმება მხოლოდ 2014წ., მაგ., როდესაც ვამბობთ, რომ კულტურული მემკვიდრეობის დაცვა ვეღარ მოხერხდება, იგულისხმება 2014წლის მანძილზე კულტურული მემკვიდრეობის დაცვა.</li>
+        <li class="footnote_main_item">ჩვენი პრიორიტეტები ყოველთვის არ ემთხვევა სახელმწიფო ბიუჯეტის კანონში მოცემულ პრიორიტეტებს.  ვინაიდან სახელმწიფო ბიუჯეტი ჯერ კიდევ არ არის სრულად პროგრამული ბიუჯეტში უამრავი მხარჯავი დაწესებულება ისეთი გაურკვეველი პრიორიტეტების ქვეშ არის მოქცეული, როგორიცაა მაგალითად ინსტიტუციონალური განვითარება და ქვეყნის ინტერესების სამართლებრივი მხარდაჭერა ნაცვლად იმისა, რომ შესაბამისი პრიორიტეტის ქვეშ იყოს მოქცეული, მაგ., პერსონალური ინფორმაციის დაცვის ინსპექტორის აპარატი სწორედ ამ გაურკვეველი პრიორიტეტების ქვეშ არის მოქცეული.</li>
+        <li class="footnote_main_item">ვინაიდან ჩვენი ონლაინ კალკულატორის სპეციფიკა მოითხოვდა ხარჯების გასაგები პრიორიტეტების ქვეშ მოქცევას, ჩვენ, მაგალითად, პერსონალური ინფორმაციის დაცვის ინსპექტორის აპარატი, რომელსაც პროგრამები/ქვეპროგრამები ჯერ კიდევ არ აქვს, იუსტიციის პრიორიტეტის ქვეშ მოვაქციეთ. სავაჭრო-სამრეწველო პალატა კი - ეკონომიკის პრიორიტეტების ქვეშ.</li>
+        <li class="footnote_main_item">ონლაინ კალკულატორში არ არის მოცემული:
+            <ol>
+              <li class="footnote_secondary_item">
+                  სახელმწიფო ბიუჯეტის ის პროგრამები, რაც ქვეპროგრამებად იშლება ვინაიდან ქვეპროგრამების დასახელებები გაცილებით უკეთესად ასახავს იმას თუ რაზე იხარჯება ფული, ვიდრე ქვეპროგრამები, მაგ.:
+                  <ol>
+                    <li>უმაღლესი საგანმანათლებლო და სამეცნიერო კვლევების პროგრამის ქვეპროგრამებია გამოცდების ორგანიზება, უმაღლესი საგანმანათლებლო და სამეცნიერო კვლევების პროგრამა 2014წელს შედგება ა. გამოცდების ორგანიზების და უმაღლესი საგანმანათლებლო და სამეცნიერო კვლევების ბ. მეცნიერებისა და სამეცნიერო კვლევების ხელშეწყობის გ. სახელმწიფო სასწავლო, სამაგისტრო გრანტები, დოქტორანტურის პროგრამები და ახალგაზრდების წახალისება.</li>
+                    <li>სოციალური დაცვა და საპენსიო უზრუნველყოფის პროგრამა იშლება ა. საპენსიო უზრუნველყოფის ბ. სოციალური დახმარებების გ. სოციალური რეაბილიტაცია და ბავშვზე ზრუნვის ქვეპროგრამებად.</li>
+                  </ol>
+              </li>
+              <li class="footnote_secondary_item">
+                  ის პროგრამები და ქვეპროგრამები, რომლებიც დიდწილად ან მთლიანად გრანტებით  ხორციელდება, ან საქართველოს მთავრობის თანამონაწილეობის გარეშე.  რაც არ უნდა მცირე იყოს ამგვარი პროგრამა/ ქვეპროგრამა, ის დაფინანსების შემცირების შემთხვევაში აღარ განხორციელდება, მაგ., რეგიონული განვითარებისა და ინფრასტრუქტურის სამინისტროს იძულებით გადაადგილებული პირების მხარდაჭერის ქვეპროგრამის ბიუჯეტი 50.125 მილიონი ლარია. ამ ქვეპროგრამაში გრანტებით დაფინანსებულია ბიუჯეტის დაახლ.  86.7%-ია (43.5 მილიონი ლარი), საქართველოს მთავრობის კი -- 13.21% (6.625 მილიონი ლარი).  ჩვენ შეგვეძლო ჩამონათვალში ქვეპროგრამის ბიუჯეტში 6.625  მილიონი ლარი მიგვეთითებინა, მაგრამ აქ გრანტი მიბმულია მთავრობის თანადაფინანსებაზე, რისი შეწყვეტის შემთხვევაშიც დონორიც შეწყვეტს იძულებით გადაადგილებული პირების მხარდაჭერის ქვეპროგრამის დაფინანსებას და ქვეყანა დაკარგავს 222.2 მილიონი ლარის კრედიტს. მიუხედავად იმისა, რომ ეს პროგრამები უცხოური დაფინანსებით ხორციელდება, მათ საქართველოს მთავრობა ეთანხმება. ამ პროგრამებისთვის საქართველოს მთავრობა მართალია ფულს სესხულობს ან გრანტის სახით იღებს და მათი შემცირება ან გაზრდა ვერ მოახდენს გავლენას დონორზე/კრედიტორზე და შესაბამისად, ყოველგვარ აზრს მოკლებულია, მაგ.,  და ათასწლეულის გამოწვევა საქართველო, ან რეგიონული განვითარებისა და ინფრასტრუქტურის სამინისტროს იძულებით გადაადგილებული პირების მხარდაჭერის ქვეპროგრამა და სხვ.
+              </li>
+              <li class="footnote_secondary_item">
+                  ისეთი ქოლგა ქვეპროგრამები, რომლებიც თავის მხრივ ქვედა საფეხურის ქვეპროგრამებად იშლება, როგორიცაა მაგალითად:
+                  <ul>
+                    <li>საზოგადოებრივი ჯანმრთელობის დაცვა, რაც თავის მხრივ იშლება 10 ქვედა საფეხურის ქვეპროგრამად: დაავადებათა ადრეული გამოვლენა და სკრინინგი, იმუნიზაცია, ეპიდზედამხედველობის პროგრამა, უსაფრთხო სისხლი, პროფესიულ დაავადებათა პრევენცია, ინფექციური დაავადებების მართვა, ტუბერკულოზის მართვა და სხვ. ცხადია, ჩამონათვალში საზოგადოებრივი ჯანმრთელობის დაცვა რომ შეგვეტანა ვერავინ მიხვდებოდა კონკრეტულად რა კეთდება ამ ქვეპროგრამის ფარგლებში.</li>
+                    <li>მოსახლეობისათვის სამედიცინო მომსახურების მიწოდება პრიორიტეტულ სფეროებში, რაც, თავის მხრივ, იყოფა 10 ქვეპროგრამად.</li>
+                    <li>საქართველოს მთავრობის ის საბიუჯეტო პროგრამები, რომელთა ბენეფიციარებმაც იციან თუ რა სარგებელს იღებენ მოცემული ქვეპროგრამით, მაგალითად საპენსიო უზრუნველყოფის ქვეპროგრამით.</li>
+                    <li>ის პროგრამები/ქვეპროგრამები, რომელთაც უშუალო ბენეფიციარები არ ჰყავთ, მაგალითად სოციალური და ჯანმრთელობის დაცვის პროგრამების მართვა.</li>
+                    <li>ჯანმრთელობის დაზღვევის ქვეპროგრამა, რაც მიუხედავად იმისა, რომ შეტანილია 2014წლის სახელმწიფო ბიუჯეტში, 2014 წლის მანძილზე ეტაპობრივად შეწყდა (218-ე დადგენილების სახ.  სადაზღვევო პროგრამა  1 აპრილს, ხოლო 165-ე დადგენილების სახ.  სადაზღვევო პროგრამა  -- 1 სექტემბერს).</li>
+                  </ul>
+              </li>
+            </ol>
+        </li>
+        <li class="footnote_main_item">
+            პროგრამების/ქვეპროგრამმების გაზრდის (მარჯვენა სვეტი) იმპლიკაციები ყოველთვის არ არის მოცემული. შესაბამისად, იმპლიკაციების განსაზღვრა ყოველთვის ვერ ხერხდება, მაგალითად რა მოხდება:
+            <ul>
+              <li>მოსწავლეების სახელმძღვანელოებით უზრუნველყოფის პროგრამის დაფინანსების გაზრდის შემთხვევაში</li>
+              <li>რეგიონებში სოფლის მეურნეობის განვითარების პროგრამის მართვის და ადმინისტრირების დაფინანსების გაზრდის შემთხვევაში</li>
+              <li>ზოგადსაგანმანათლებლო სკოლების და სხვა ზოგიერთი ქვეპროგრამის დაფინანსების გაზრდის შემთხვევაში.</li>
+            </ul>
+        </li>
+      </ol>
+    </div>
+<% end %>
