--- a/app/views/shared/_budget_columns.html.erb
+++ b/app/views/shared/_budget_columns.html.erb
@@ -6,7 +6,7 @@
 <div id="alert_section_id" class="col-sm-12 column nopadding" style="text-align: center;">
   <!-- <div class="amountTransfer">ok</div> -->
   <div class="alert alert-success">
-    <span class="alert_amount_message"><strong><%= t('budget.georgian_budget_2014') %></strong> - <%= t('budget.please_move_funds') %></span>
+    <span class="alert_amount_message"><%= t('budget.please_move_funds') %></span>
   </div>
 </div>
 
